force-app/main/default/objects/Campaign__c/Campaign__c.object-meta.xml
<CustomObject>
    <description>Marketing campaign tracking</description>
    <label>Campaign</label>
    <nameField>
        <displayFormat>CMP-{00000}</displayFormat>
        <label>Campaign ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>