force-app/main/default/objects/Campaign__c/fields/Actual_Spend__c.field-meta.xml
<CustomField>
    <fullName>Actual_Spend__c</fullName>
    <label>Actual Spend</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>