force-app/main/default/objects/Campaign__c/fields/Bookings__c.field-meta.xml
<CustomField>
    <fullName>Bookings__c</fullName>
    <label>Bookings</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>