force-app/main/default/objects/Campaign__c/fields/Cost_Model__c.field-meta.xml
<CustomField>
    <fullName>Cost_Model__c</fullName>
    <label>Cost Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPL</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Revenue Share</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>