force-app/main/default/objects/Campaign__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Owned Campaigns</relationshipLabel>
    <relationshipName>Owned_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>