force-app/main/default/objects/Campaign__c/fields/Site_Visits__c.field-meta.xml
<CustomField>
    <fullName>Site_Visits__c</fullName>
    <label>Site Visits</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>