force-app/main/default/objects/Campaign__c/fields/Target_Project__c.field-meta.xml
<CustomField>
    <fullName>Target_Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Target Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>