force-app/main/default/objects/Campaign__c/fields/Total_Enquiry_Sources__c.field-meta.xml
<CustomField>
    <fullName>Total_Enquiry_Sources__c</fullName>
    <description>Count of all Enquiry Source records linked to this Campaign</description>
    <label>Total Enquiry Sources</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>