force-app/main/default/objects/Campaign__c/fields/Total_Expense_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Expense_Amount__c</fullName>
    <label>Total Expense Amount</label>
    <summarizedField>Campaign_Expense__c.Amount_Spent__c</summarizedField>
    <summaryForeignKey>Campaign_Expense__c.Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>