force-app/main/default/objects/Campaign__c/fields/Total_Leads__c.field-meta.xml
<CustomField>
    <fullName>Total_Leads__c</fullName>
    <description>Count of tagged leads</description>
    <label>Total Leads</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>