force-app/main/default/objects/Campaign__c/validationRules/END_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>END_Date_Validation</fullName>
    <active>true</active>
    <description>end date cant be less than start date</description>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorMessage>End Date cannot be earlier than Start Date.</errorMessage>
</ValidationRule>